# zero2prod

./: Cargo.toml  Dockerfile
.github/workflows/: audit.yml  general.yml
configuration/: base.yaml  production.yaml
migrations/: 20230409193038_create_subscriptions_table.sql
scripts/: init_db.sh
src/: configuration.rs  domain.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
