[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path="src/main.rs"
name="zero2prod"

[dependencies]
axum = "0.6.17"
reqwest = "0.11.16"
serde = { version = "1.0.160", features = ["derive"] }
tokio = { version = "1.28.0", features = ["full"] }
config = "0.13.3"
uuid = { version = "1.3.1", features = ["v4"] }
chrono = { version = "0.4.24", default-features = false, features = ["clock"] }
tower-http = { version = "0.4.0", features = ["trace"] }
tracing-subscriber = { version= "0.3.17", features = ["registry", "env-filter"] }
tracing = "0.1.38"
tracing-bunyan-formatter = "0.3.7"
secrecy = { version = "0.8.0", features = ["serde"] }

[dependencies.sqlx]
version = "0.6"
default-features = false
features = [
"runtime-tokio-rustls",
"macros",
"postgres",
"uuid",
"chrono",
"migrate",
"offline"
]

[dev-dependencies]
once_cell = "1.17.1"
