[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path="src/main.rs"
name="zero2prod"

[dependencies]
axum = "0.6.18"
serde = { version = "1.0.163", features = ["derive"] }
tokio = { version = "1.28.1", features = ["full"] }
config = "0.13.3"
uuid = { version = "1.3.2", features = ["v4"] }
chrono = { version = "0.4.24", default-features = false, features = ["clock"] }
tower-http = { version = "0.4.0", features = ["trace"] }
tracing-subscriber = { version= "0.3.17", features = ["registry", "env-filter"] }
tracing = "0.1.37"
tracing-bunyan-formatter = "0.3.7"
secrecy = { version = "0.8.0", features = ["serde"] }
serde-aux = "4.2.0"
unicode-segmentation = "1.10.1"
validator = "0.16.0"

[dependencies.sqlx]
version = "0.6"
default-features = false
features = [
"runtime-tokio-rustls",
"macros",
"postgres",
"uuid",
"chrono",
"migrate",
"offline"
]

[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["json", "rustls-tls"]

[dev-dependencies]
claims = "0.7.0"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
fake = "~2.3.0"
once_cell = "1.7.2"
rand = "0.8.5"
wiremock = "0.5"
